minor cleanup for JsonIO related classes